--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -31,10 +31,10 @@ on:
     branches: [ "main" ]
 
 env:
-  AWS_REGION: MY_AWS_REGION                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: MY_ECR_REPOSITORY           # set this to your Amazon ECR repository name
-  ECS_SERVICE: MY_ECS_SERVICE                 # set this to your Amazon ECS service name
-  ECS_CLUSTER: MY_ECS_CLUSTER                 # set this to your Amazon ECS cluster name
+  AWS_REGION: eu-north-1                   # set this to your preferred AWS region, e.g. us-west-1
+  ECR_REPOSITORY: gradeant           # set this to your Amazon ECR repository name
+  ECS_SERVICE: frontend-task                 # set this to your Amazon ECS service name
+  ECS_CLUSTER: worthy-gorilla-vol1qu                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: ci-cd.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: Frontend           # set this to the name of the container in the
