--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -35,7 +35,7 @@ env:
   ECR_REPOSITORY: gradeant           # set this to your Amazon ECR repository name
   ECS_SERVICE: frontend-task                 # set this to your Amazon ECS service name
   ECS_CLUSTER: worthy-gorilla-vol1qu                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: ci-cd.json # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: task-def.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: Frontend           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
