--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -33,7 +33,7 @@ on:
 env:
   AWS_REGION: eu-north-1                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: gradeant           # set this to your Amazon ECR repository name
-  ECS_SERVICE: frontend-task                 # set this to your Amazon ECS service name
+  ECS_SERVICE: frontend-service                 # set this to your Amazon ECS service name
   ECS_CLUSTER: worthy-gorilla-vol1qu                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: task-def.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
