--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -37,7 +37,7 @@ env:
   ECS_CLUSTER: worthy-gorilla-vol1qu                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: task-def.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: Frontend           # set this to the name of the container in the
+  CONTAINER_NAME: frontend           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
 permissions:
